--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A work-in-progress FireRoad-compatible API using MIT's Data Warehouse, intended to replace at least part of FireRoad's scraper when finished.",
   "main": "js/index.js",
   "scripts": {
-    "eslint": "eslint *.ts",
-    "start": "eslint *.ts && tsc && node js/index.js",
+    "eslint": "eslint src/*.ts",
+    "start": "eslint src/*.ts && tsc && node js/index.js",
     "tsc": "tsc"
   },
   "repository": {
