--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ node_modules
 js
 
 # Note: to update the warehouse config, you'll need to temporarily comment this out
-# warehouse-conf/
+warehouse-conf/
