--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,4 @@ node_modules
 .env
 js
 
-# Note: to update the warehouse config, you'll need to temporarily comment this out
-warehouse-conf/
+warehouse-conf.local
